CI: Disable au4_build_windows.yml action
Add a condition to the workflow job to run only when the repository is the main
audacity/audacity repo. This avoids unnecessary workflow runs on forks, which
fail due to missing secrets.

--- a/.github/workflows/au4_build_windows.yml
+++ b/.github/workflows/au4_build_windows.yml
@@ -23,6 +23,7 @@ env:
 
 jobs:
   au4_build_windows:
+    if: github.repository == 'audacity/audacity'
     runs-on: windows-2022
     steps:
     - name: Clone repository
